--- a/index.html
+++ b/index.html
@@ -1,48 +1,97 @@
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-<script src="correlation.js"></script>
-<script src="script.js"></script>
+<!DOCTYPE html>
+<html>
 
-<link rel="stylesheet" type="text/css" href="style.css" media="screen" />
-<div id="stock_miniQuote_head" class="ajaxtrigger"><span id="stockSymbol"></span>&nbsp;(common stock)</div>
+<head>
 
-<div id="stock_miniQuote">
-  <div id="stockIndicator">
-    <p>Retrieving stock information...</p>
-  </div>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 
+  <!-- Latest compiled and minified CSS -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
+    crossorigin="anonymous">
 
-  <div class="stock_divider">
+  <!-- Optional theme -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp"
+    crossorigin="anonymous">
 
-    <div id="stock_left">
-      <span class="stock_label">Price</span><br/>
-      <strong class="stock_strong">$<span id="stockAsk"></span></strong><br/>
+  <!-- Latest compiled and minified JavaScript -->
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
+    crossorigin="anonymous"></script>
+
+  <!-- Local JS -->
+  <script src="correlation.js"></script>
+  <script src="script.js"></script>
+
+</head>
+
+<body>
+
+  <link rel="stylesheet" type="text/css" href="style.css" media="screen" />
+  <div id="stock_miniQuote_head" class="ajaxtrigger">
+    <span id="stockSymbol"></span>&nbsp;(common stock)</div>
+
+  <div id="stock_miniQuote">
+    <div id="stockIndicator">
+      <p>Retrieving stock information...</p>
     </div>
 
 
-    <div id="stock_right">
-      <span class="stock_label">Change</span><br/>
-      <strong class="stock_strong"><span id="stockChange"></span></strong><br />
-      <strong class="stock_strong"><span id="stockChangePercent"></span></strong><br />
+    <div class="stock_divider">
+
+      <div id="stock_left">
+        <span class="stock_label">Price</span>
+        <br/>
+        <strong class="stock_strong">$
+          <span id="stockAsk"></span>
+        </strong>
+        <br/>
+      </div>
+
+
+      <div id="stock_right">
+        <span class="stock_label">Change</span>
+        <br/>
+        <strong class="stock_strong">
+          <span id="stockChange"></span>
+        </strong>
+        <br />
+        <strong class="stock_strong">
+          <span id="stockChangePercent"></span>
+        </strong>
+        <br />
+      </div>
+      <div style="clear: both;"></div>
+
+
     </div>
-    <div style="clear: both;"></div>
 
+    <div id="stock_body">
 
-  </div>
+      <div id="stock_body_content">
+        <span class="stock_label">Volume</span>
+        <br/>
+        <strong class="stock_strong">
+          <span id="stockVolume"></span>
+        </strong>
+        <br />
+        <br />
+        <span class="stock_label">Average Daily Volume</span>
+        <br/>
+        <strong class="stock_strong">
+          <span id="stockAvgVolume"></span>
+        </strong>
+        <br />
+        <br />
+        <span class="stock_label">52 Week Range</span>
+        <br/>
+        <strong class="stock_strong">
+          <span id="stockRange"></span>
+        </strong>
 
-  <div id="stock_body">
+      </div>
 
-    <div id="stock_body_content">
-      <span class="stock_label">Volume</span><br/>
-      <strong class="stock_strong"><span id="stockVolume"></span></strong>
-      <br /><br />
-      <span class="stock_label">Average Daily Volume</span><br/>
-      <strong class="stock_strong"><span id="stockAvgVolume"></span></strong>
-      <br /><br />
-      <span class="stock_label">52 Week Range</span><br/>
-      <strong class="stock_strong"><span id="stockRange"></span></strong>
+      <div style="clear: both;"></div>
 
     </div>
+</body>
 
-    <div style="clear: both;"></div>
-
-  </div>
+</html>
