delay, long list of simbols, problem with response de la vantage

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     crossorigin="anonymous"></script>
 
   <!-- Local JS -->
-  <script src="correlation.js"></script>
+  <!-- <script src="correlation.js"></script> -->
   <script src="script.js"></script>
 
 </head>
@@ -92,6 +92,23 @@
       <div style="clear: both;"></div>
 
     </div>
+
+    <script>
+      // function waitForElement() {
+      //   if ((typeof stockValuesArray !== "undefined") && (typeof stockMarketArray !== "undefined")) {
+      //     //variable exists, do what you want
+      //     console.log("***Stock value:", stockValuesArray);
+      //     console.log("***market index ETF = VOO:", stockMarketArray);
+      //   }
+      //   else {
+      //     setTimeout(waitForElement, 1000);
+      //   }
+      // }
+
+      // waitForElement();
+      // console.log("ceva din scrpit tag");
+
+    </script>
 </body>
 
 </html>
