--- a/index2.html
+++ b/index2.html
@@ -4,7 +4,7 @@
 <head>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-    <script src="script2.js"></script>
+    <script src="test.js"></script>
 </head>
 
 <body>
